[package]
name = "blog_os"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "0.1.4"
spin = "0.3.4"
bitflags = "0.7.0"

[dependencies.x86]
version = "0.6.0"
default-features = false

[dependencies.multiboot2]
git = "https://github.com/phil-opp/multiboot2-elf64"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
